--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: MIT
-# Copyright (c) 2023-2024 Vypercore. All Rights Reserved
+# Copyright (c) 2023-2025 Noodle-Bytes. All Rights Reserved
 
 name: Tests
 on: pull_request
@@ -26,3 +26,25 @@ jobs:
       - name: Run tests
         run: |
           poetry run pytest --cov
+
+  test-viewer:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: ["22", "23", "24"]
+    defaults:
+      run:
+        working-directory: ./viewer
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          node-version-file: ./viewer/package.json
+          cache-dependency-path: ./viewer/package-lock.json
+
+      - name: Run tests
+        run: |
+          npm test
