--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,11 +44,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          node-version-file: ./viewer/package.json
-          cache-dependency-path: ./viewer/package-lock.json
 
       - name: Install dependencies
-        run: npm install --dev
+        run: npm install
 
       - name: Run tests
         run: npm test
