--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
 # SPDX-License-Identifier: MIT
-# Copyright (c) 2023-2024 Vypercore. All Rights Reserved
+# Copyright (c) 2023-2025 Noodle-Bytes. All Rights Reserved
 
 name: Tests
 on: pull_request
+permissions:
+  contents: read
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -26,3 +28,25 @@ jobs:
       - name: Run tests
         run: |
           poetry run pytest --cov
+
+  test-viewer:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: ["22", "23", "24"]
+    defaults:
+      run:
+        working-directory: ./viewer
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
