--- a/viewer/package.json
+++ b/viewer/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 4000",
-    "build": "tsc && vite build",
+    "dev": "vite --port 4000 --config vite.config.ts",
+    "build": "vite build",
     "bundle": "BUCKET_CVG_JSON=$BUCKET_CVG_JSON vite build --config vite-bundle.config.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.6.48",
@@ -31,6 +32,7 @@
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vite-pwa/assets-generator": "^1.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^8.55.0",
@@ -38,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.12",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^3.1.4"
   }
