--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,14 +20,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Set up poetry
+      - name: Set up uv
         run: |
-          python -m pip install --upgrade pip poetry
-          poetry install
+          python -m pip install --upgrade pip uv
+          uv sync
 
       - name: Run tests
         run: |
-          poetry run pytest --cov
+          uv run pytest --cov
 
   test-viewer:
     runs-on: ubuntu-latest
