--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,36 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[project]
 name = "bucket"
 version = "2.1.3"
 description = "Functional coverage written in Python"
 authors = [
-    "Stuart Alldred <stuartalldred@gmail.com>",
-    "Edward Kotarski <edktrsk@gmail.com>",
+    {name = "Stuart Alldred", email = "stuartalldred@gmail.com"},
+    {name = "Edward Kotarski", email = "edktrsk@gmail.com"},
 ]
-license = "MIT"
+license = {text = "MIT"}
 readme = "README.md"
-packages = [
-    { include = "bucket" }
+requires-python = ">=3.11"
+dependencies = [
+    "rich>=13.3.4",
+    "sqlalchemy==2.0.40",
+    "gitpython==3.1.41",
+    "click>=8.1.3",
+    "pydantic>=2.8.2",
 ]
-# Include the web viewer assets in the final wheel/sdist
-include = [
-    "viewer/**/*"
+
+[project.optional-dependencies]
+dev = [
+    "pre-commit>=3.8.0",
+    "pytest>=8.0.1",
+    "pytest-cov>=4.1.0",
 ]
 
-
-[tool.poetry.dependencies]
-python = "^3.11"
-rich = "^13.3.4"
-sqlalchemy = "2.0.40"
-gitpython = "3.1.41"
-click = "^8.1.3"
-pydantic = "^2.8.2"
-
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.8.0"
-pytest = "^8.0.1"
-pytest-cov = "^4.1.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 bucket = "bucket.__main__:cli"
+
+[tool.hatch.build.targets.wheel]
+packages = ["bucket"]
+include = ["viewer/**/*"]
