--- a/viewer/package.json
+++ b/viewer/package.json
@@ -17,6 +17,7 @@
     "@stitches/react": "^1.2.8",
     "antd": "^5.13.2",
     "colorjs.io": "^0.5.2",
+    "fflate": "^0.8.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
