--- a/viewer/package.json
+++ b/viewer/package.json
@@ -4,18 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 4000",
-    "build": "tsc && vite build",
+    "dev": "vite --port 4000 --config vite.config.ts",
+    "build": "vite build",
     "bundle": "BUCKET_CVG_JSON=$BUCKET_CVG_JSON vite build --config vite-bundle.config.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.6.48",
     "@stitches/react": "^1.2.8",
     "antd": "^5.13.2",
     "colorjs.io": "^0.5.2",
+    "fflate": "^0.8.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +25,8 @@
     "react-helmet-async": "^2.0.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
-    "vite-plugin-singlefile": "^2.0.2"
+    "vite": "^7.2.2",
+    "vite-plugin-singlefile": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.8",
@@ -31,13 +34,14 @@
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vite-pwa/assets-generator": "^1.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.12",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^3.1.4"
   }
