--- a/electron/package.json
+++ b/electron/package.json
@@ -25,7 +25,7 @@
       "category": "public.app-category.developer-tools",
       "target": [
         {
-          "target": "dmg",
+          "target": "dir",
           "arch": [
             "arm64"
           ]
