chore: Stop tracking copilot-instructions (keep local only)

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ index.html
 
 # Node modules
 electron/node_modules/
+
+# Local Copilot instructions (do not check in)
+.github/copilot-instructions.md
